<resources>
    <string name="app_name">GADSLeaderboard</string>
    <string name="hint_first_name">First Name</string>
    <string name="submit">Submit</string>
    <string name="github_project_link">Project on Github (Link)</string>
    <string name="email_address">Email Address</string>
    <string name="hint_last_name">Last Name</string>
    <string name="project_submission">Project Submission</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
</resources>